@@ -1,3 +1,6 @@
+2011-04-14 yusei
+* Remove old unnecessary tales expression from relation string fields.
+
 2010-11-05 yusei
 * Modify variation category list in the field library and stop showing base category name.
 
