@@ -1,3 +1,6 @@
+2011-04-14 yusei
+* Remove old unnecessary tales expression from relation string fields.
+
 2010-03-02 yusei
 * Remove short title.
 
